[package]
name = "rustling"
version = "0.9.1"
authors = ["hdlj <hubert.delajonquiere@snips.net>", "Mathieu Poumeyrol <kali@zoy.org>"]
edition = "2018"

[workspace]
members = ["core", "ml"]

[dependencies]
rustling-core = { path = "core", version = "0.9.1", registry = "kenbun" }
rustling-ml = { path = "ml", version = "0.9.1", registry = "kenbun" }
failure = "0.1"
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
